--- a/css/mstyle.css
+++ b/css/mstyle.css
@@ -336,3 +336,37 @@ h1 span {
 .tv .list:nth-child(5)::before {
     content: 'the last dance';
 }
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropbtn {
+    background-color: rgba(0, 0, 0, 0.5); /* change background color to rgba(0, 0, 0, 0.5) */
+    color: white; /* keep text color white */
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 12px; /* keep button rounded */
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
